--- a/TheWorld/wwwroot/index.html
+++ b/TheWorld/wwwroot/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="sidebar">
         <img src="img/user1.jpg" alt="headshot" class="headshot" />
-        <span>Tony Cooke</span>
+        <span>William Smith</span>
         <ul class="menu">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
